--- a/src/Top.css
+++ b/src/Top.css
@@ -1,46 +1,99 @@
+@charset "utf-8";
 .flex {
-  display: flex; /*横並び*/
+  display: flex;
   align-items: center;
 }
 
 .flex .image {
-  width: 320px; /*画像サイズ指定*/
+  width: 20px; 
   margin: 0;
-  padding: 0;
+  padding: 50px;
   overflow: hidden;
   position: relative;
 }
 
 .flex .text {
-  font-size: 36px;
+  font-size: 32px;
+  font-weight: bold;
   margin: 0 0 0 20px;
   padding: 0;
+  white-space: nowrap; 
 }
 
 .box2 {
   padding: 0.5em 1em;
-  margin: 2em 4em;
+  margin: 2em 2em;
+  text-align: center;
   font-weight: bold;
-  color: #4f5050;/*文字色*/
+  width: 80%;             
+  max-width: 400px;         
+  color: #4f5050;            
   background: #FFF;
-  border: solid 3px #4770a5;/*線*/
-  border-radius: 10px;/*角の丸み*/
+  border: solid 3px #a54747; 
+  border-radius: 10px;       
 }
 
 .box2 p {
-  margin: 0; 
+  margin: 0;
   padding: 0;
 }
 
-
 h2 {
   font-size: 36px;
-  text-align:center;
-  padding:20px 0;
+  text-align: center;
+  padding: 20px 0;
 }
 
-
 h3 {
-  text-align:right;
-  padding:0 50px 0 0;
+  text-align: left;          
+  padding: 0;               
+  margin-left: 2em;       
+}
+
+.p-test01 {
+  display: flex;
+  justify-content: center;  
+  align-items: center;      
+  height: 150px;
+}
+
+.flex_2 {
+  display: flex;
+  align-items: center;
+}
+
+.flex_2 .image {
+  width: 120px; 
+  margin: 20px;
+  padding: 0;
+  overflow: hidden;
+  position: relative;
+}
+
+.flex_2 .text {
+  text-align: center;
+  margin: 0 0 0 20px;
+  padding: 0;
+}
+
+.btn {
+  margin: 2em 2em;
+  display: inline-block;
+  font-weight: bold;
+  padding: 10px 20px;
+  border: 3px solid rgb(152, 72, 72);
+  border-radius: 10px;
+  background-color: transparent;
+  color: #383030;
+  text-decoration: none;
+  font-size: 24px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  width: 80%;              
+  max-width: 400px;          
+  text-align: center;        
+}
+
+.btn:hover {
+  background-color: rgb(179, 52, 52);
+  color: #ffffff;
 }
