--- a/src/Top.css
+++ b/src/Top.css
@@ -1,4 +1,26 @@
 @charset "utf-8";
+.header {
+  padding: 0;
+  margin: 0;     
+  max-height: 70px;                    
+  background: #a50c0c;
+  border: solid 3px #a50c0c; 
+  display: flex;
+  align-items: center;
+}
+
+.header .header_logo img {
+  max-width: 90px; 
+  height: auto; 
+  margin-left: -40px; 
+}
+
+.header .menu img {
+  max-width: 50px; 
+  height: 45px; 
+  margin: 5px 0 0 180px;
+}
+
 .flex {
   display: flex;
   align-items: center;
