--- a/src/Step5_complete.css
+++ b/src/Step5_complete.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 .header {
   padding: 0;
   margin: 0;
@@ -34,13 +35,19 @@
   max-height: 70px; /* 最大高さをヘッダーの高さに合わせる */
 }
 
+h1 {
+  padding: 20px 20px;
+  margin: 0;
+  text-align: left;
+}
+
 .flex {
   display: flex;
   align-items: center;
 }
 
 .flex .image {
-  width: 20px; 
+  width: 20px;
   margin: 0;
   padding: 50px;
   overflow: hidden;
@@ -52,16 +59,24 @@
   font-weight: bold;
   margin: 0 0 0 20px;
   padding: 0;
-  white-space: nowrap; 
+  white-space: nowrap;
 }
+
+
 .container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: column;  
+  align-items: center;      
   width: 100%;
+}
+.container .Image img{
+  margin: 20px 0px -20px 0px; 
+  max-width: 300px;
+  height: auto;
 }
 
 .box2,
+.input-box,
 .btn {
   width: 80%;               
   max-width: 400px;          
@@ -78,53 +93,28 @@
   border-radius: 10px;
 }
 
-.box2 p {
-  margin: 0;
-  padding: 0;
-}
-
-h2 {
-  font-size: 36px;
+.input-box {
+  padding: 10px 20px;
+  font-size: 20px;
+  border: solid 3px #a54747;
+  border-radius: 10px;
   text-align: center;
-  padding: 0px -40px;
-  margin-top: -1em; 
-}
-
-h3 {
-  text-align: left;          
-  padding: 0;               
-  margin-left: 2em;       
 }
 
 .p-test01 {
   display: flex;
-  justify-content: center;  
-  align-items: center;      
+  justify-content: center;
+  align-items: center;
   height: 150px;
 }
 
 .flex_2 {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-.flex_2 .image {
-  width: 120px; 
-  margin: 10px;
-  padding: 10px;
-  overflow: hidden;
-  position: relative;
-}
-
-.flex_2 .text {
-  text-align: center;
-  font-size: 16px;
-  margin: 0 0 0 0;
-  padding: 0;
-}
-
 .btn {
-  margin: 2em 2em;
   display: inline-block;
   font-weight: bold;
   padding: 10px 20px;
@@ -133,19 +123,9 @@ h3 {
   background-color: transparent;
   color: #383030;
   text-decoration: none;
+  font-size: 24px;
   transition: background-color 0.3s ease, color 0.3s ease;
-  width: 80%;              
-  max-width: 400px;          
-  text-align: center;        
 }
-.btn .flex_2 {
-  display: flex;
-  align-items: center;
-  font-size: 18px; /* テキストサイズを調整 */
-  white-space: nowrap; /* テキストが折り返されないようにする */
-}
-
-
 
 .btn:hover {
   background-color: rgb(179, 52, 52);
@@ -161,7 +141,6 @@ h3 {
   .header .header_logo img {
     max-height: 60px; /* ロゴの高さを調整 */
   }
-  
 
   .header .menu img {
     max-height: 60px; /* メニューアイコンの高さを調整 */
@@ -182,4 +161,5 @@ h3 {
     max-height: 50px; /* メニューアイコンの高さを調整 */
   }
 }
+
 
