--- a/src/Page3_2.css
+++ b/src/Page3_2.css
@@ -35,6 +35,7 @@
   max-height: 70px; /* 最大高さをヘッダーの高さに合わせる */
 }
 
+
 h1 {
   padding: 20px 20px;
   margin: 0;
@@ -69,11 +70,7 @@ h1 {
   align-items: center;      
   width: 100%;
 }
-.container .Image img{
-  margin: 20px 0px 40px 0px; 
-  max-width: 300px;
-  height: auto;
-}
+
 
 .box2,
 .input-box,
@@ -103,6 +100,7 @@ h1 {
 
 .p-test01 {
   display: flex;
+  padding: 10px 20px;
   justify-content: center;
   align-items: center;
   height: 150px;
@@ -161,5 +159,3 @@ h1 {
     max-height: 50px; /* メニューアイコンの高さを調整 */
   }
 }
-
-
