--- a/src/Top.css
+++ b/src/Top.css
@@ -65,12 +65,13 @@
 .btn {
   width: 80%;               
   max-width: 400px;          
-  margin: 1em 0;             
+  margin: 1em 0;   
+  padding: 1em 0;         
   text-align: center;
 }
 
 .box2 {
-  padding: 0.5em 1em;
+  padding: 1em 1em;
   font-weight: bold;
   color: #4f5050;
   background: #FFF;
@@ -151,6 +152,9 @@ h3 {
   background-color: rgb(179, 52, 52);
   color: #ffffff;
 }
+.button-container button {
+  margin-bottom: 10px; /* ボタンとボタンの間隔を10ピクセルに指定 */
+}
 
 @media screen and (max-width: 768px) {
   .header {
@@ -166,11 +170,14 @@ h3 {
   .header .menu img {
     max-height: 60px; /* メニューアイコンの高さを調整 */
   }
+  .button-container button {
+    margin-bottom: 10px; /* ボタンとボタンの間隔を10ピクセルに指定 */
+  }
 }
 
 @media screen and (max-width: 480px) {
   .header {
-    height: 90px;
+    height: 65px;
     padding: 0 5px; /* ヘッダー内の左右の余白を調整 */
   }
 
@@ -180,6 +187,10 @@ h3 {
 
   .header .menu img {
     max-height: 50px; /* メニューアイコンの高さを調整 */
+  }
+
+  .button-container button {
+    margin-bottom: 10px; /* ボタンとボタンの間隔を10ピクセルに指定 */
   }
 }
 
