--- a/src/Step4.css
+++ b/src/Step4.css
@@ -157,4 +157,13 @@ h1 {
   .header .menu img {
     max-height: 50px; /* メニューアイコンの高さを調整 */
   }
+
+  .error {
+    color: red;
+    margin-bottom: 5px;
+  }
+
+  input:invalid {
+    border: solid 10px red;
+  }
 }
