--- a/src/Top.css
+++ b/src/Top.css
@@ -148,12 +148,38 @@ h3 {
 
 
 
+
 .btn:hover {
   background-color: rgb(179, 52, 52);
   color: #ffffff;
 }
 .button-container button {
   margin-bottom: 10px; /* ボタンとボタンの間隔を10ピクセルに指定 */
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.button-container button {
+  width: 80%;
+  max-width: 400px;
+  margin-bottom: 20px;
+  padding: 30px 0;
+  font-size: 24px;
+  background-color: #ffffff; /* 薄い赤 */
+  color: #383030;
+  border: 3px solid #b33434;
+  border-radius: 10px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.button-container button:hover {
+  background-color: #b33434; /* 濃い赤 */
+  color: #ffffff; /* 文字色を白に */
 }
 
 @media screen and (max-width: 768px) {
