--- a/src/Top.css
+++ b/src/Top.css
@@ -186,9 +186,9 @@ h3 {
   position: absolute;
   top: 70px; 
   right: 10px;
-  background-color: rgba(251, 241, 241, 0.969); 
+  background-color: rgba(255, 255, 255, 0.969); 
   padding: 20px;
-  border-radius: 0px;
+  border: 1px solid rgb(221, 76, 76);;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000; 
 }
@@ -199,7 +199,7 @@ h3 {
   margin: 20px 0px;
   padding: 0px 100px;
   background-color: transparent; 
-  color: #383030;
+  color: rgb(221, 76, 76);
   border: none; 
   font-size: 24px; 
   transition: background-color 0.3s ease, color 0.3s ease;
@@ -207,7 +207,7 @@ h3 {
 }
 
 .floating-menu button:hover {
-  background-color: #b33434;
+  background-color: #c92c2c;
   color: #ffffff;
 }
 
@@ -216,7 +216,7 @@ h3 {
   display: block;
   width: 100%;
   height: 1px;
-  background-color: #b33434; /* 横棒の色 */
+  background-color: #d50505; /* 横棒の色 */
   position: absolute;
   bottom: -10px; /* ボタンの下に表示 */
   left: 0;
